tests/syntax_errors/unexpected_token.out
error: unexpected_token.li 1,5: unexpected token `=`
    1 | var = 0
      |     ^
